Repository Ve Unit Of Work yapısı oluşturuldu.

--- a/MA-Portfolio.DAL/MA-Portfolio.DAL.csproj
+++ b/MA-Portfolio.DAL/MA-Portfolio.DAL.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\MA-Portfolio.Entities\MA-Portfolio.Entities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repository\Concrete\" />
+  </ItemGroup>
+
 </Project>
