--- a/MA-Portfolio.API/MA-Portfolio.API.csproj
+++ b/MA-Portfolio.API/MA-Portfolio.API.csproj
@@ -30,8 +30,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MA-Portfolio.DAL\MA-Portfolio.DAL.csproj" />
-    <ProjectReference Include="..\MA-Portfolio.Entities\MA-Portfolio.Entities.csproj" />
+    <ProjectReference Include="..\MA-Portfolio.BLL\MA-Portfolio.BLL.csproj" />
+    <ProjectReference Include="..\MA-Portfolio.Common\MA-Portfolio.Common.csproj" />
+    <ProjectReference Include="..\MA-Portfolio.DTOs\MA-Portfolio.DTOs.csproj" />
   </ItemGroup>
 
 </Project>
