--- a/MA-Portfolio.DAL/MA-Portfolio.DAL.csproj
+++ b/MA-Portfolio.DAL/MA-Portfolio.DAL.csproj
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Migrations\" />
     <Folder Include="Repository\Concrete\" />
   </ItemGroup>
 
